# ai_demo

./: README.md  face_detection.py  face_detection_streamlit.py  ocr.py  procurement_streamlit.py  pyproject.toml
