[tool.poetry]
name = "aidea-spark"
version = "0.1.0"
description = ""
authors = ["mook"]
readme = "README.md"

[tool.poetry.dependencies]
opencv-python = "^4.10.0.84"
python = ">=3.10"
tensorflow = "^2.17.0"
deepface = "^0.0.93"
fastapi = "^0.115.0"
scipy = "^1.14.1"
face-recognition = "^1.3.0"
uvicorn = {extras = ["all"], version = "^0.30.6"}
tf-keras = "^2.17.0"
python-multipart = "^0.0.10"
streamlit = "^1.38.0"
pythainlp = "^5.0.4"
easyocr = "^1.7.2"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
